[gd_scene load_steps=2 format=3 uid="uid://xu13mx6h1uav"]

[ext_resource type="Script" path="res://Scripts/GameUI.gd" id="1_v15jc"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v15jc")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GameplayInfo" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreDisplay" type="Label" parent="MarginContainer/GameplayInfo"]
layout_mode = 2
text = "SCORE"

[node name="TimeDisplay" type="Label" parent="MarginContainer/GameplayInfo"]
layout_mode = 2
text = "TI:ME"

[node name="CarSelection" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="SelectSedan" type="Button" parent="MarginContainer/CarSelection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Sedan"

[node name="SedanCdBar" type="ProgressBar" parent="MarginContainer/CarSelection"]
layout_mode = 2
size_flags_vertical = 1

[node name="SelectMotorcycle" type="Button" parent="MarginContainer/CarSelection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Motorcycle"

[node name="MotorcycleCdBar" type="ProgressBar" parent="MarginContainer/CarSelection"]
layout_mode = 2

[node name="SelectTruck" type="Button" parent="MarginContainer/CarSelection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Truck
"

[node name="TruckCdBar" type="ProgressBar" parent="MarginContainer/CarSelection"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="MarginContainer/Title/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Placeholder title"
horizontal_alignment = 1

[node name="Highscore" type="Label" parent="MarginContainer/Title/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "highscore text"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/Title/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="MarginContainer/Title/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Endscreen" type="MarginContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Endscreen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Text" type="Label" parent="MarginContainer/Endscreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Endscreen/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="MarginContainer/Endscreen/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "final score text"
horizontal_alignment = 1

[node name="HighscoreText" type="Label" parent="MarginContainer/Endscreen/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "New high score!"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="MarginContainer/Endscreen/VBoxContainer"]
layout_mode = 2
text = "main menu"
